--- a/page.html
+++ b/page.html
@@ -31,8 +31,8 @@
 					
                     <p clas="subscribe" style="background: #fcf7ab; padding-left: 10px">
 
-                        <a href="http://twitter.com/amitu">Follow me on twitter: 
-                        @amitu</a>.
+                    <a href="http://twitter.com/{{ settings.author.twitter }}">Follow me on twitter: 
+                          @{{ settings.author.twitter }}</a>.
 
                     </p>
 
