--- a/page.html
+++ b/page.html
@@ -17,17 +17,19 @@
 				</div><!-- entry-content -->
 			</div><!-- bd -->
 					<hr>
-<figure class="kudo kudoable" data-id="1">
-    <a class="kudobject">
-        <div class="opening">
-            <div class="circle">&nbsp;</div>
-        </div>
-    </a>
-    <a href="#kudo" class="count">
-        <span class="num">0</span>
-        <span class="txt">Kudos</span>
-    </a>
-</figure>
+
+                {% block page_footer %}
+                    <figure class="kudo kudoable" data-id="1">
+                        <a class="kudobject">
+                            <div class="opening">
+                                <div class="circle">&nbsp;</div>
+                            </div>
+                        </a>
+                        <a href="#kudo" class="count">
+                            <span class="num">0</span>
+                            <span class="txt">Kudos</span>
+                        </a>
+                    </figure>
 					
                     <p clas="subscribe" style="background: #fcf7ab; padding-left: 10px">
 
@@ -35,6 +37,7 @@
                           @{{ settings.author.twitter }}</a>.
 
                     </p>
+                {% endblock %}
 
           {% block comments %}
 					<div class="comment">
