--- a/page.html
+++ b/page.html
@@ -31,12 +31,12 @@
                         </a>
                     </figure>
 					
-                    <p clas="subscribe" style="background: #fcf7ab; padding-left: 10px">
+                    <!-- p clas="subscribe" style="background: #fcf7ab; padding-left: 10px">
 
                     <a href="http://twitter.com/{{ settings.author.twitter }}">Follow me on twitter: 
                           @{{ settings.author.twitter }}</a>.
 
-                    </p>
+                    </p -->
                 {% endblock %}
 
           {% block comments %}
